--- a/doc/references.bib
+++ b/doc/references.bib
@@ -193,3 +193,191 @@
 	YEAR = {2023},
 	JOURNAL = {ABC News}
 }
+
+@ARTICLE{cnnballoon,
+	AUTHOR = {Oren Liebermann and Haley Britzky and Michael Conte and Nectar Gan},
+	TITLE = {Pentagon tracking suspected Chinese spy balloon over the US},
+	YEAR = {2023},
+	JOURNAL = {CNN}
+}
+
+@ARTICLE{nytballoon,
+	AUTHOR = {Jim Robbins},
+	TITLE = {A Giant Balloon Floats Into Town, and It’s All Anyone Can Talk About},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
+}
+
+@ARTICLE{wpballoon,
+	AUTHOR = {Dan Lamothe and Alex Horton},
+	TITLE = {Chinese spy balloon flying over U.S. ‘right now,’ Pentagon says},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
+}
+
+@ARTICLE{foxballoon,
+	AUTHOR = {Adam Sabes and Liz Friden and Jennifer Griffin},
+	TITLE = {US government monitoring suspected Chinese spy balloon over northern states},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
+}
+
+@ARTICLE{nypballoon,
+	AUTHOR = {Patrick Reilly},
+	TITLE = {Chinese spy balloon tracked over northern US: Pentagon},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbcballoon,
+	AUTHOR = {Courtney Kube and Carol E. Lee},
+	TITLE = {Suspected Chinese spy balloon found over northern U.S.},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjballoon,
+	AUTHOR = {Vivian Salama and Nancy A. Youssef and Michael R. Gordon},
+	TITLE = {Chinese Spy Balloon Tracked Over U.S. This Week},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbcballoon,
+	AUTHOR = {Max Matza},
+	TITLE = {Chinese spy balloon: US tracks suspected surveillance device},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abcballoon,
+	AUTHOR = {Martha Raddatz and Luis Martinez and Karson Yiu},
+	TITLE = {Large Chinese reconnaissance balloon spotted over the US, officials say},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
+}
+
+@ARTICLE{cnnhamas,
+	AUTHOR = {Ibrahim Dahman and Hadas Gold and Lauren Iszo and Amir Tal and Abeer Salman and Kareem Khadder and Richard Allen Greene and Hande Atay Alam},
+	TITLE = {Netanyahu says Israel is ‘at war’ after Hamas launches surprise air and ground attack from Gaza},
+	YEAR = {2023},
+	JOURNAL = {CNN}
+}
+
+@ARTICLE{nythamas,
+	AUTHOR = {Isabel Kershner},
+	TITLE = {For Israelis, Scale of Tragedy Starts to Set In},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
+}
+
+@ARTICLE{wphamas,
+	AUTHOR = {Susannah George and Sarah Dadouch and Claire Parker and Shira Rubin},
+	TITLE = {Israel formally declares war against Hamas as more than 1,000 killed on both sides},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
+}
+
+@ARTICLE{foxhamas,
+	AUTHOR = {Peter Aitken and Chris Pandolfo},
+	TITLE = {Israel's military says force is 'at war' with Hamas as IDF hits back at terror targets},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
+}
+
+@ARTICLE{nyphamas,
+	TITLE = {Netanyahu tells Israel ‘We are at war’ after Hamas launches an unprecedented attack, killing at least 300 people},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbchamas,
+	AUTHOR = {Raf Sanchez and Daniel Arkin},
+	TITLE = {'We are in a war,' Netanyahu says after Hamas launches surprise attack},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjhamas,
+	AUTHOR = {Shayndi Raice and Dion Nissenbaum},
+	TITLE = {Israel Declares War on Hamas After Surprise Assault From Gaza},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbchamas,
+	AUTHOR = {Yolande Knell and Raffi Berg and David Gritten},
+	TITLE = {Israel attack: PM says Israel at war after 250 killed in attack from Gaza},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abchamas,
+	AUTHOR = {Jon Haworth and Patricio Chile},
+	TITLE = {Hundreds dead, thousands injured in Israel and Gaza after Hamas launches rockets; Israel declares war},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
+}
+
+@ARTICLE{cnnpentagon,
+	AUTHOR = {Zachary Cohen and Natasha Bertrand and Kylie Atwood},
+	TITLE = {What we know about the major Pentagon intelligence leak},
+	YEAR = {2023},
+	JOURNAL = {CNN}
+}
+
+@ARTICLE{nytpentagon,
+	AUTHOR = {Helene Cooper and Julian E. Barnes and Eric Schmitt},
+	TITLE = {When ‘Top Secret’ Is Not So Secret},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
+}
+
+@ARTICLE{wppentagon,
+	AUTHOR = {Shane Harris and Dan Lamothe},
+	TITLE = {Intelligence leak exposes U.S. spying on adversaries and allies},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
+}
+
+@ARTICLE{foxpentagon,
+	AUTHOR = {Peter Aitken},
+	TITLE = {Pentagon document leak has immediate impact on national security: sucks up 'a lot of oxygen'},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
+}
+
+@ARTICLE{nyppentagon,
+	AUTHOR = {Samuel Chamberlain and Emily Crane},
+	TITLE = {Law enforcement search home of Jack Teixeira, Mass. Air National Guardsman at center of ‘digileaks’ scandal},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbcpentagon,
+	AUTHOR = {Dan De Luce and Kevin Collier and Phil McCausland and Ken Dilanian},
+	TITLE = {Leaked secret Pentagon documents lift the lid on U.S. spying on Russia’s war in Ukraine},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjpentagon,
+	AUTHOR = {Nancy A. Youssef},
+	TITLE = {Pentagon Document Leak: What We Know So Far and the Biggest Takeaways},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbcpentagon,
+	AUTHOR = {Paul Adams},
+	TITLE = {Ukraine war: Who leaked top secret US documents - and why?},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abcpentagon,
+	AUTHOR = {Luis Martinez and Shannon K. Crawford and Alexander Mallin},
+	TITLE = {What you need to know about the leaked US secret documents},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
+}
